--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
      <input id="searchTerm">
         <button id="searchButton">weather</button>
 
-
-
-
+<p>Clouds </p>
+<div id="C" >  </div>
+<p>Rain </p>
+<div id="R" >  </div>
+<p>Coordinates </p>
+<p id="Co" >  </p>
 
   </body>
 
